Summary of important user-visible changes for image 2.0.1:
-------------------------------------------------------------------

 ** The following functions are new:

      checkerboard    strel

 ** The plot produced by `imhist' is correctly scaled on the X axis so that the
    colorbar corresponds to the actual intensity of the stems; the given
    colormarp is used on the colorbar for indexed images; and the stems no
    longer display the markers at their top. The Y axis is also adjusted in case
    of peaks with high values that prevent a good overview of the histogram.

 ** The `fftconv2' usage "fftconv2 (v1, v2, a)", for convolution of a matrix by
    one vector in the column direction and another vector in the row direction,
    has been removed. Please use conv2 for such cases.

 ** The function `rgbplot' accepts a style option which alows for a composite
    display of a colormap.

 ** The option to create poisson noise to an image has been added to `imnoise'. 

 ** With the addition of the strel class, the following functions are now able
    to handle strel objects:

      imerode

Summary of important user-visible changes for image 2.0.0:
-------------------------------------------------------------------

 ** The following functions are new:

      analyze75info         imabsdiff         iptcheckconn
      analyze75read         imadd             iptcheckmap
      analyze75write        imbothat          iptchecknargin
      blockproc             imcrop            iptcheckstrs
      bwlabeln              imdivide          iptnum2ordinal
      getrangefromclass     imlincomb         iscolormap
      im2int16              immultiply        normxcorr2
      im2single             imsubtract        wavelength2rgb

 ** The following functions have been deprecated in previous releases
    of the image package and have now been removed:

      imginfo

 ** The function `deriche' has been removed.
